--- a/modalBox/modalBox.html
+++ b/modalBox/modalBox.html
@@ -6,17 +6,16 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<link rel="stylesheet" type="text/css" href="modalBox.css">
 	
-    <script src="../js/lib/jquery-1.12.4.min.js"></script>
+    <script src="jquery-1.9.1.min.js"></script>
 
     <script type="text/javascript" src="modalBox.js"></script>
 	<script type="text/javascript">
-		var i = 0;
-		if(i==0){
+		
 			$(function(){
 				$(".modalBox").modalBox();
-			})
+			});
 			
-		}
+		
 	</script>
 
 </head>
