--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="glide.core.css">
   <link rel="stylesheet" type="text/css" href="glide.theme.css">
+  <link rel="stylesheet" type="text/css" href="glide.theme.css">
   <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="glide.min.js"></script>
 </head>
 <body>
     <div class="wrapper">
+        <div class="animationZone">
+            
+        </div>
+
         <div class="paginationZone clear">
             <ul class="pagination">
                         
