--- a/button/button.html
+++ b/button/button.html
@@ -116,18 +116,26 @@
 	</div>
 
 	<div class="line hcj">
-			<div id="html" class="block block-3">
-				<div class="title">id</div>
+			<div id="html" class="block block-2">
+				<div class="title">html</div>
+				<div class="content"></div>
 			</div>
 			
-			<div id="css" class="block block-3">
+			<div  class="block block-2">
+				 <div class="line">
+				 	<div id="css" class="block block-1">
+				 		<div class="title">css</div>
+				 		<div class="content"></div>
+				 	</div>
+				 </div>
+				 <div class="line">
+				 	<div id = "js" class="block block-1">
+						<div class="title">js</div>
+						<div class="content"></div>
+					</div>
+				 </div>
 				 
 			</div>
-
-			<div id = "js" class="block block-3">
-				
-			</div>
-			
 		</div>
 	</div>
 </body>
