--- a/button/button.html
+++ b/button/button.html
@@ -115,28 +115,34 @@
 		</div>
 	</div>
 
-	<div class="line hcj">
-			<div id="html" class="block block-2">
-				<div class="title">html</div>
-				<div class="content"></div>
+	<!-- <div class="line hcj">
+			<div class="block block-2">
+				<div id="html" >
+					<div class="title">html</div>
+					<div class="content"></div>
+				</div>
 			</div>
 			
 			<div  class="block block-2">
 				 <div class="line">
-				 	<div id="css" class="block block-1">
-				 		<div class="title">css</div>
-				 		<div class="content"></div>
+				 	<div  class="block block-1">
+				 		<div id="css">
+					 		<div class="title">css</div>
+					 		<div class="content"></div>
+				 		</div>
 				 	</div>
 				 </div>
 				 <div class="line">
-				 	<div id = "js" class="block block-1">
-						<div class="title">js</div>
-						<div class="content"></div>
+				 	<div  class="block block-1">
+				 		<div id = "js">
+							<div class="title">js</div>
+							<div class="content"></div>
+						</div>
 					</div>
 				 </div>
 				 
 			</div>
 		</div>
-	</div>
+	</div> -->
 </body>
 </html>
