--- a/modalBox/modalBox.html
+++ b/modalBox/modalBox.html
@@ -12,6 +12,9 @@
 	<script type="text/javascript">
 		
 			$(function(){
+				$(".modalBox").on("shown.bs.modalBox",function(e){
+					
+				})
 				$(".modalBox").modalBox();
 			});
 			
