--- a/button/button.html
+++ b/button/button.html
@@ -104,7 +104,9 @@
 					<span class="button btn-r-m bg-pink white">
 					<img class="icon" src="/img/icon_w.png" style="margin-top: -3px;">做帐</span>
 				</div>
-			
+				<div class="box">
+					<a class="button float-r green more marin-t-7">更多 >></a>
+				</div>
 		
 	</div>
 
