--- a/button/button.html
+++ b/button/button.html
@@ -26,13 +26,16 @@
 		<div class="container1200">
 			<div class="line ">	
 				<div class="block block-1 ">
-					<div class="brandName white">Button</div>
+					<div class="brandName white ">Button</div>
 				</div>
 			</div>
 		</div>
 	</div>	
 	<div id="buttonBox" class="container1200" ><!-- data-set="set" -->
-		
+			<div class="box">
+				<div class="button btn-num01 mar-center">04</div>
+			</div>
+
 			<div class="box">
 					《行宫》
 
@@ -101,7 +104,7 @@
 				</div> 
 			
 				<div class="box">
-					<span class="button btn-r-m bg-pink white">
+					<span class="button btn-r-m bg-pink white float-r">
 					<img class="icon" src="/img/icon_w.png" style="margin-top: -3px;">做帐</span>
 				</div>
 				<div class="box">
