--- a/slider/slider.html
+++ b/slider/slider.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/base.css">
 	<link rel="stylesheet" type="text/css" href="/css/frame.css">
 	<link rel="stylesheet" type="text/css" href="/css/button.css">
+	<link rel="stylesheet" type="text/css" href="/css/slider.css">
 	<link rel="stylesheet" type="text/css" href="/css/index.css">
 	
 	<script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
@@ -13,20 +14,54 @@
 	<script type="text/javascript" src="/js/index.js"></script>
 	<script type="text/javascript">
 		$(function(){
-			$(".container1200").set({
-				brandName:"Slider"
+			$("#sliderBox").set({
+				brandName:"Slider",
+				rowBlock:1
 			});
 		});
 		
 	</script>
 </head>
 <body>
-	<div class="container1200" ><!-- data-set="set" -->
 	<div class="bg extend-width bg-black">
-		<div class="line ">	
-			<div class="block block-1 ">
-				<div class="brandName white"></div>
+		<div class="container1200">
+			<div class="line ">	
+				<div class="block block-1 ">
+					<div class="brandName white"></div>
+				</div>
 			</div>
+		</div>
+	</div>	
+	
+	<div id="sliderBox" class="container1200">
+		<div class="box">
+			<!-- slider begin -->
+		      <div id="slideBox01" class="slideBox" data-plugin="SuperSlide">
+		          <div class="hd">
+		            <ul>
+		              <li><a></a></li>
+		              <li><a></a></li>
+		              <li><a></a></li>
+		              <li><a></a></li>
+		            </ul>
+		          </div>
+		          <div class="bd">
+		            <ul>
+		              <li><a href="#" target="_blank"><img src="/img/slider01.png" /></a></li>
+		              <li><a href="#" target="_blank"><img src="/img/slider01.png" /></a></li>
+		              <li><a href="#" target="_blank"><img src="/img/slider01.png" /></a></li>
+		              <li><a href="#" target="_blank"><img src="/img/slider01.png" /></a></li>
+		            </ul>
+		          </div>
+		      </div>
+		      <!-- slider end -->
+		      <script type="text/javascript">
+		      		var plugin = "/js/jquery.SuperSlide.2.1.1.js";
+		      		$.getScript(plugin,function(){
+		      			jQuery("#slideBox01").slide({mainCell:".bd ul",autoPlay:true,effect:"leftLoop",easing:"swing",interTime:"3500"});
+		      		})
+    				
+		      </script>
 		</div>
 	</div>	
 	
