--- a/slider/slider.html
+++ b/slider/slider.html
@@ -56,10 +56,13 @@
 		      </div>
 		      <!-- slider end -->
 		      <script type="text/javascript">
-		      		var plugin = "/js/jquery.SuperSlide.2.1.1.js";
-		      		$.getScript(plugin,function(){
-		      			jQuery("#slideBox01").slide({mainCell:".bd ul",autoPlay:true,effect:"leftLoop",easing:"swing",interTime:"3500"});
-		      		})
+		      		function SuperSlide (){
+		      			var plugin = "/js/jquery.SuperSlide.2.1.1.js";
+			      		$.getScript(plugin,function(){
+			      			jQuery("#slideBox01").slide({mainCell:".bd ul",autoPlay:true,effect:"leftLoop",easing:"swing",interTime:"3500"});
+			      		})
+		      		}
+		      		
     				
 		      </script>
 		</div>
