--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -35,7 +35,9 @@
 		</div>
 	</div>	
 	<div id="barHeaderBox" class="container1200" ><!-- data-set="set" -->
-		
+		<div class="box" data-block="3">
+			
+		</div>
 
 		<div class="box ">
 			<div class="bg-green">
