--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -35,8 +35,23 @@
 		</div>
 	</div>	
 	<div id="barHeaderBox" class="container1200" ><!-- data-set="set" -->
-		<div class="box" data-block="3">
-			
+		<div class="box" >
+			<div class="waveContainer">
+				<ul>
+				    <li class="wave paint depth-30"></li>
+				    <li class="wave plain depth-40"></li>
+				    <li class="wave paint depth-50"></li>
+				    <li class="lighthouse depth-60"></li>
+				    <li class="wave paint depth-60"></li>
+				    <li class="wave plain depth-80"></li>
+				    <li class="wave paint depth-100"></li>
+				</ul>
+			</div>
+	<style type="text/css">
+		
+		
+		
+	</style>
 		</div>
 
 		<div class="box ">
