--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -47,11 +47,7 @@
 				    <li class="wave paint depth-100"></li>
 				</ul>
 			</div>
-	<style type="text/css">
-		
-		
-		
-	</style>
+	
 		</div>
 
 		<div class="box ">
@@ -296,6 +292,12 @@
 
       		</script>
 		</div>	
+		<div class="box" data-block="3">
+			<div class="header01 clear">
+                <span class="h-title01 green">产品检测范围</span>
+                <a class="more float-r">更多</a>
+            </div>
+		</div>
 		
 	</div>
 
