--- a/slider/slider.html
+++ b/slider/slider.html
@@ -136,18 +136,17 @@
                                       <p class="stb-text">第六届中国国际服务外包交易博览会...</p>
                                       <p>8月29日下午，中国国际投资促进会与杭州市商务委员会在北京中关村软件园联合召开了第六...<a class="button green">[查看详情]</a></p>
                                       </div>
-									  <div class="news-list01">
-							                <ul>
-							                    <li><a>2014年度上海市服务贸易发展专项资金申   <span class="date">09-04</span></a></li>
-							                    <li><a>“高企认定”提速生产性服务业发展<span class="date">09-04</span></a></li>
-							                    <li><a>重庆将大力发展五类服务贸易<span class="date">09-04</span></a></li>
-							                    <li><a>中国海运服务业服务贸易<span class="date">09-04</span></a></li>
-							                    <li><a>中国海运服务业服务贸易长期处于逆差状态<span class="date">09-04</span></a></li>
-							                    <li><a>2014年度上海市服务贸易发展专项资金申报指南<span class="date">09-04</span></a></li>
-							                    <li><a>2014年度上海市服务贸易发展专项资金申<span class="date">09-04</span></a></li>
-							                </ul>  
-							          </div>
-									
+                                      <div class="news-list01">
+                                          <ul>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+                                              <li><a><span class="date">09-04</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+
+                                          </ul>  
+                                      </div>
                                 </li>
                               </ul>
                               <ul class="switch">
