--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -70,6 +70,34 @@
             </script>
         </div>
         <div class="box">
+          <a class="dBtn-row green">查看详情&gt;&gt;</a>
+        </div>
+        <div class="box">
+          <div class="tagRow02 clearfix">
+            <span class="tag bg-green float-l white">果蔬及其制品</span>
+            <span class="text02">背景介绍</span>
+          </div>
+        </div>
+        <div class="box">
+           <div class="news-list01 text-color">
+                  <ul>
+                      <li><a>
+                      <span class="margin-t-2 float-r gray"><i class="glyphicon glyphicon-chevron-right"></i></span>  
+                      <span class="list-text ellipsis">中国海运服务业服务贸易长期处于逆差状态易长期处于逆差状态易长期处于逆差状态</span>   
+                      
+                      </a></li>
+                      <li><a>
+                      <span class="float-r gray"><i class="glyphicon glyphicon-chevron-right"></i></span>  
+                      <span class="list-text ellipsis">中国海运服务业服务贸易长期处于逆差状态</span>   
+                      </a></li>
+                      <li><a>
+                      <span class="float-r gray"><i class="glyphicon glyphicon-chevron-right"></i></span>  
+                      <span class="list-text ellipsis">中国海运服务业服务贸易长期处于逆差状态</span>
+                      </a></li>
+                  </ul>  
+           </div>
+        </div>
+        <div class="box">
         	<div class="honorPic" data-plugin="equalHeights" data-p-casename="mhonorPic01">
                   <div class="hp-item col-xs-6" ><img src="/img/nav01.png"></div>
                   <div class="hp-item col-xs-6" ><img src="/img/nav01.png"></div>
