--- a/sideBar/sideBar.html
+++ b/sideBar/sideBar.html
@@ -36,6 +36,54 @@
 	</div>	
 	
 	<div id="sideBarBox" class="container1200">
+		<div class="box">
+			<div class="l-sider01 float-l">
+                  <ul>
+                      <li>
+                          <a class="floor bg-green f00">
+                              <div class="link">
+                                <div class="p-wrapper ">
+                                  <p class="t01 white">关于我们</p><p class="t02">About us</p>
+                                </div>
+                              </div>
+                          </a>
+                      </li>
+                      <li><a class="floor f01 on"><p class="t01">中心简介</p></a></li>
+                      <li><a class="floor f02"><p class="t01">组织架构</p></a></li>
+                      <li><a class="floor f03"><p class="t01">中心资质</p></a></li>
+                      <li><a class="floor f05"><p class="t01">重点实验室介绍</p></a></li>
+                      <li><a class="floor f04"><p class="t01">中心文化</p></a></li>
+                      <li><a class="floor f05"><p class="t01">联系我们</p></a></li>
+                      
+                  </ul>
+                  <div class="border"><img src="/img/border.png"></div>
+            </div>
+            <script type="text/javascript">
+            	 $(".l-sider01 .floor:not(.f00,.on)").hover(function(){
+		              $(this).addClass("on")
+		           },function(){
+		              $(this).removeClass("on")
+		           })
+            </script>
+		</div>
+		<div class="box">
+			<div class="sbcontent02 clear">
+                  <div class="abtn-wrapper on"><a class="a02-btn btn01">中心简介</a></div>
+                  <div class="abtn-wrapper"><a class="a02-btn btn02">组织机构</a></div>
+                  <div class="abtn-wrapper"><a class="a02-btn btn03">中心文化</a></div>
+                  <div class="abtn-wrapper"><a class="a02-btn btn04">重点实验室</a></div>
+                  <div class="abtn-wrapper"><a class="a02-btn btn05">中心资质</a></div>
+                  <div class="abtn-wrapper"><a class="a02-btn btn06">联系我们</a></div>
+            </div>
+            <script type="text/javascript">
+            	
+	           $('.abtn-wrapper:not(.on)').hover(function(){
+	              $(this).addClass("on")
+	           },function(){
+	              $(this).removeClass("on")
+	           })
+            </script>
+		</div>
 		<div class="box" >
 			<div class="r-sider01 float-r">
                 <ul>
