--- a/barHeader/barHeader.html
+++ b/barHeader/barHeader.html
@@ -36,6 +36,24 @@
 	</div>	
 	<div id="barHeaderBox" class="container1200" ><!-- data-set="set" -->
 		<div class="box">
+			 <div class="a-title-header01">
+	            <p class="mainTitle">学做并重 深化改革——上海检验检疫局扎实开展“两学一做”学习教育</p>
+	            <p class="articleTime">发布日期：2016-09-21</p>
+	         </div>
+	         <style type="text/css">
+	         	
+	         </style>
+		</div>
+		<div class="box">
+			<div class="header03 clear">
+                  <span class="h-title01float-l">中心简介</span>
+                  <div class="more float-r">你的位置：<a>网站首页</a> &gt; <a>企业文化</a> </div>
+            </div>
+            <style type="text/css">
+            	
+            </style>
+		</div>
+		<div class="box">
 			<div class="logoRow ">
                 <div class="logo float-l"><img src="/img/logo.png"></div>
                 <div class="margin-l-493 clear">
